# jarvis

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  app_fast.py  app_jarvis.py  demo_jarvis.py  install_dependencies.py  jarvis_personality.py  pyproject.toml  routes.py
Agents/: CipherAgent.py  __init__.py
aiagents/: __init__.py  gpt4.py
core/: budget_manager.py  config.py  llm_orchestrator.py  mcp_router.py  voice_manager.py
docs/: API_DOCUMENTATION.md
llm_providers/: __init__.py  base_provider.py  claude_provider.py  emergency_provider.py  ollama_provider.py  openai_provider.py
loggers/: __init__.py  pp.py
speechrecognizers/: FastRecognizers.py  FreeRecognizers.py  WakeWordRecognizer.py  __init__.py
voice_providers/: __init__.py  base_voice_provider.py  edge_tts_provider.py  elevenlabs_provider.py  gtts_provider.py  pyttsx3_provider.py  text_only_provider.py
voices/: ElevenLabs.py  FreeSpeech.py  __init__.py
