[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "jarvis-project"
version = "0.1.0"
description = "My Python project that uses the OpenAI API"
authors = ["bharathmuppa@gmal.com"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
pygame = "2.3.0"
SpeechRecognition = "3.10.0"
requests = "2.28.0"
PyAudio = "0.2.13"
elevenlabslib ="0.4.2"
pyttsx3 = "2.90"
pyobjc = "9.2"
neo4j = "5.9.0"
Flask ="2.3.2"
py2neo = "2021.2.3"
[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
my-script = "my_module:main"